Fix dark mode for charge-type-filter

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -224,3 +224,7 @@
 .dark .tutorial-close:hover {
   color: #ccc;
 }
+
+.dark .charge-type-filter {
+  background-color: #222;
+}
